--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -1,5 +1,20 @@
-public with sharing class LeadTriggerHandler {
-    public LeadTriggerHandler() {
-
+public class LeadTriggerHandler {
+    public static void HandleBeforeInsert(List<Lead> currLeads) {
+        
+        for ( Lead i : currLeads) {
+            i.description = 'Book Store Corp. LLC';
+        }
+    }
+    public static void HandleAfterInsert(List<Lead> currLeads) {
+        List<Task> customerTask = new List<Task>();
+        for ( Lead i : currLeads) {
+           Task currTask = new Task();
+           currTask.ownerId = i.OwnerId;
+           currTask.Subject = ' New Customer, yay!';
+           currTask.Priority = 'Normal';
+           currTask.whatId = i.id;
+           customerTask.add(currTask);
+        }
+        Insert customerTask;
     }
 }
