adding comments and headers

--- a/force-app/main/default/classes/CustomerTriggerHandlerTest.cls
+++ b/force-app/main/default/classes/CustomerTriggerHandlerTest.cls
@@ -1,13 +1,21 @@
+/*
+// Name: CustomerTriggerHandlerTest class
+// Author: Andreology
+// Created: 04/08/21
+// Updated: 04/10/21
+// Description: The customer trigger handler Test class will handle 
+//              any positive or negative testing needed for the "Account" standard object 
+*/
 @isTest
 public class CustomerTriggerHandlerTest {
     @isTest Public static void TestInsert() {
-        Account currAccount = new Account(Name='Testing account');
+        Account currAccount = new Account(Name='New Test');
         test.starttest();
         insert currAccount;
         test.stoptest();
         Account accInput = [SELECT Id, Name, Description FROM Account WHERE id = :currAccount.id];
         Task taskInput = [SELECT Id, Subject FROM Task WHERE whatId = :currAccount.id];
-        system.assertEquals('Testing account', accInput.name);
+        system.assertEquals('New Test', accInput.name);
         system.assertEquals('Book Store Corp. LLC', accInput.description);
     }
 }
