--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -1,3 +1,11 @@
+/*
+// Name: LeadTriggerHandler class
+// Author: Andreology
+// Created: 04/08/21
+// Updated: 04/10/21
+// Description: The Lead trigger handler class will handle 
+//              before insert and after update on the standard Lead object. 
+*/
 public class LeadTriggerHandler {
     public static void HandleBeforeInsert(List<Lead> currLeads) {
         
@@ -5,9 +13,11 @@ public class LeadTriggerHandler {
             i.description = 'Book Store Corp. LLC';
         }
     }
+    //Method to add a task to an account 
+    //that is made in the org so the bookstore can track
     public static void HandleAfterInsert(List<Lead> currLeads) {
         List<Task> customerTask = new List<Task>();
-        for ( Lead i : currLeads) {
+        for ( Lead i : currLeads) { //set new task
            Task currTask = new Task();
            currTask.ownerId = i.OwnerId;
            currTask.Subject = ' New Customer, yay!';
