--- a/force-app/main/default/classes/OrderTriggerHandler.cls
+++ b/force-app/main/default/classes/OrderTriggerHandler.cls
@@ -1,11 +1,20 @@
+/*
+// Name: OrderTriggerHandler class
+// Author: Andreology
+// Created: 04/08/21
+// Updated: 04/10/21
+// Description: The Order trigger handler class will handle 
+//              before inserts needed for the standard object Order
+*/
 public class OrderTriggerHandler {
+    //handleBefore insert will add a service fee cost to the total cost of an order for the book store services. 
      public static void HandleBeforeInsert(Set<Order> currOrders) {
         List<OrderBook__c> books = [SELECT BookId__c, order__c FROM OrderBook__c];
         Set<Id> bookIds = new Set<Id>();
         Map<Id, Decimal> idToBook = new Map<Id, Integer>();
         Map<Id, Integer> idToOrder = new Map<Id, Integer>();
         Set<Id> orderIds = new Set<Id>();
-
+        //check books in junction object
         for (OrderBook__c  i : books ) {
             bookIds.add(i.bookId__c);
             orderIds.add(i.order__c);
@@ -18,7 +27,8 @@ public class OrderTriggerHandler {
         }
 
         List<Order> myOrders = [SELECT Id, Name FROM Order WHERE Id NOT IN :orderIds];
-        
+        //take the outer join of the sets to get only
+        //orders in junction table between Book and Order. i.e. BookOrder Table
         currOrders.removeAll(myOrders);
         for (Order i : currOrders) {
             if(i.Final_Cost__c == null) {
