finished all trigger test cases

--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -15,16 +15,16 @@ public class LeadTriggerHandler {
     }
     //Method to add a task to an account 
     //that is made in the org so the bookstore can track
-    public static void HandleAfterInsert(List<Lead> currLeads) {
-        List<Task> customerTask = new List<Task>();
-        for ( Lead i : currLeads) { //set new task
-           Task currTask = new Task();
-           currTask.ownerId = i.OwnerId;
-           currTask.Subject = ' New Customer, yay!';
-           currTask.Priority = 'Normal';
-           currTask.whatId = i.id;
-           customerTask.add(currTask);
-        }
-        Insert customerTask;
-    }
+   // public static void HandleAfterInsert(List<Lead> currLeads) {
+    //    List<Task> customerTask = new List<Task>();
+   //     for ( Lead i : currLeads) { //set new task
+    //       Task currTask = new Task();
+    //       currTask.ownerId = i.OwnerId;
+    //       currTask.Subject = 'New Customer, yay!';
+    //       currTask.Priority = 'Normal';
+     //      currTask.whatId = i.id;
+     //      customerTask.add(currTask);
+     //   }
+     //   Insert customerTask;
+    //}
 }
